footer overflow tablet fixed

--- a/source/scss/footer/footer.scss
+++ b/source/scss/footer/footer.scss
@@ -94,5 +94,6 @@
   @media (min-width: $tablet-width) {
     width: 28px;
     height: 32px;
+    flex-shrink: 0;
   }
 }
